test/spec_vectors/simd_f64x2_cmp/fail/module_23.wat
(module (func $f64x2.ge-1st-arg-empty (result v128) (f64x2.ge (v128.const f64x2 0 0))))